@@ -115,6 +115,6 @@ AC_OUTPUT([Makefile \
   gdb.arch/Makefile gdb.asm/Makefile gdb.base/Makefile \
   gdb.cp/Makefile gdb.disasm/Makefile gdb.dwarf2/Makefile \
   gdb.fortran/Makefile gdb.server/Makefile \
-  gdb.java/Makefile gdb.mi/Makefile \
-  gdb.objc/Makefile gdb.threads/Makefile gdb.trace/Makefile \
+  gdb.java/Makefile gdb.mi/Makefile gdb.objc/Makefile \  
+  gdb.pascal/Makefile gdb.threads/Makefile gdb.trace/Makefile \
   gdb.xml/Makefile])
